--- a/passenger-service/src/main/resources/application.properties
+++ b/passenger-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.application.name=passenger-service
+server.port=8081
+server.servlet.context-path=/api/v1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/passengers
+spring.datasource.username=root
+spring.datasource.password=FLRPVcp41NC7mwD2TtX5
+spring.jpa.hibernate.ddl-auto=validate
