--- a/pom.xml
+++ b/pom.xml
@@ -8,20 +8,25 @@
         <version>3.2.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <packaging>pom</packaging>
     <groupId>com.modsen</groupId>
     <artifactId>cab-aggregator-app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>cab-aggregator-app</name>
     <description>cab-aggregator-app</description>
+    <modules>
+        <module>passenger-service</module>
+    </modules>
     <properties>
         <java.version>17</java.version>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
