--- a/passenger-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/passenger-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-passenger-table.yaml
+  - include:
+      file: db/changelog/changeset/rename-second-name-field.yaml
