fix: add pom packaging to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <version>3.2.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <packaging>pom</packaging>
     <groupId>com.modsen</groupId>
     <artifactId>cab-aggregator-app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -21,7 +22,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
