feat: rollback for liquibase, update by email, multiple message exception

--- a/passenger-service/src/main/resources/db/changelog/changeset/create-passenger-table.yaml
+++ b/passenger-service/src/main/resources/db/changelog/changeset/create-passenger-table.yaml
@@ -33,3 +33,6 @@ databaseChangeLog:
                   constraints:
                     nullable: false
                     unique: true
+      rollback:
+        - dropTable:
+            tableName: passengers
