--- a/passenger-service/src/main/resources/application.properties
+++ b/passenger-service/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/passengers
 spring.datasource.username=root
 spring.datasource.password=FLRPVcp41NC7mwD2TtX5
 spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
