--- a/driver-service/src/main/resources/application.properties
+++ b/driver-service/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/drivers
 spring.datasource.username=root
 spring.datasource.password=FLRPVcp41NC7mwD2TtX5
 spring.jpa.hibernate.ddl-auto=validate
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=driver-service-group
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.auto-offset-reset=latest
+
+spring.kafka.producer-topic.name=ride-with-driver-topic
+spring.kafka.ride-consumer-topic.name=ride-topic
+spring.kafka.status-consumer-topic.name=driver-status-topic
