--- a/payment-service/src/main/resources/exception-messages.properties
+++ b/payment-service/src/main/resources/exception-messages.properties
@@ -3,3 +3,5 @@ page.invalid.number=Page number has to be at least 1, but requested %s!
 page.invalid.number.with-limit=For page size %s there are only %s pages, but requested %s
 page.invalid.sortField=There is no %s field in %s entity!
 stripe.message=error with code %s during the work with Stripe API!
+entity.not-found.id=%s entity with id %s was not found!
+entity.not-found.stripe.id=%s entity with stripe id %s was not found!
