refactor: codestyle changes and pass stripe keys as env variables

--- a/payment-service/src/main/resources/exception-messages.properties
+++ b/payment-service/src/main/resources/exception-messages.properties
@@ -9,3 +9,7 @@ driver.already-exists=Driver account for driver with id %s has been already crea
 stripe.customer.already-exists=Stripe customer for passenger with id %s has been already created earlier!
 account.balance.insufficient=Requested to withdraw amount is %s, which is higher than actual account balance
 account.not-found.driver-id=Driver account for driver with id %s has not been created yet!
+card.already-exists=Credit card %s already exists for holder with role %s and id %s!
+card.default=Credit card %s should be default, because holder with role %s and id %s does not have any cards yet!
+ride.already-paid=Ride with id %s has already been paid at %s!
+card.holder.invalid=Credit card with id %s does not belong to %s with id %s!
