feat: add exception message templates and fix controller

--- a/rating-service/src/main/resources/application.properties
+++ b/rating-service/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.username=root
 spring.datasource.password=FLRPVcp41NC7mwD2TtX5
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+rating.average.default=5.00
