--- a/promocode-service/src/main/resources/application.properties
+++ b/promocode-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.application.name=promocode-service
+server.port=8085
+server.servlet.context-path=/api/v1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/promocodes
+spring.datasource.username=root
+spring.datasource.password=FLRPVcp41NC7mwD2TtX5
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
