--- a/driver-service/src/main/resources/application.properties
+++ b/driver-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/drivers
 spring.datasource.username=root
 spring.datasource.password=FLRPVcp41NC7mwD2TtX5
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=driver-service-group
