--- a/ride-service/src/main/resources/application.yml
+++ b/ride-service/src/main/resources/application.yml
@@ -17,4 +17,29 @@ spring:
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
     enabled: true
+  kafka:
+    consumer:
+      auto-offset-reset: latest
+      bootstrap-servers: localhost:9092
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      group-id: ride-service-group
+    producer:
+      bootstrap-servers: localhost:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    ride-producer-topic:
+      name: ride-topic
+    status-producer-topic:
+      name: driver-status-topic
+    consumer-topic:
+      name: ride-with-driver-topic
 
+    #    spring.kafka.consumer.bootstrap-servers=localhost:9092
+    #    spring.kafka.consumer.group-id=driver-service-group
+    #    spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+    #    spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+    #    spring.kafka.consumer.auto-offset-reset=latest
+    #    spring.kafka.producer-topic.name=ride-with-driver-topic
+    #    spring.kafka.ride-consumer-topic.name=ride-topic
+    #    spring.kafka.status-consumer-topic.name=driver-status-topic
