--- a/ride-service/src/main/resources/application.yml
+++ b/ride-service/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
       name: ride-topic
     status-producer-topic:
       name: driver-status-topic
-    consumer-topic:
+    ride-consumer-topic:
       name: ride-with-driver-topic
 
     #    spring.kafka.consumer.bootstrap-servers=localhost:9092
