--- a/ride-service/src/main/resources/exception-messages.properties
+++ b/ride-service/src/main/resources/exception-messages.properties
@@ -1,2 +1,3 @@
 ride.not-available.driver=There is no available ride for a driver with id %s!
 ride.not-available.passenger=There is no confirmed ride for a passenger with id %s!
+ride.not-finished.passenger=Passenger with id %s already has unfinished ride!
