--- a/rating-service/src/main/resources/exception-messages.properties
+++ b/rating-service/src/main/resources/exception-messages.properties
@@ -1,5 +1,6 @@
 rating.already-exists=%s has already been rated for a ride with id %s!
 rating.not-found=Rating with id %s was not found!
+rating.person.id.illegal=You can't rate %s with id %s for the ride that he was not a member of!
 page.invalid.size=Page size should be at least 1, but requested %s!
 page.invalid.number=Page number should be at least 1, but requested %s!
 page.invalid.number.with-limit=For the page size %s there are only %s pages, but requested %s
