--- a/promocode-service/src/main/resources/exception-messages.properties
+++ b/promocode-service/src/main/resources/exception-messages.properties
@@ -3,3 +3,4 @@ promocode.not-found.name=Promocode with name %s was not found!
 promocode.already.exists=Promocode with name %s already exists!
 promocode.already.applied=Promocode with name %s has already been applied by passenger with id %s!
 promocode.expired=Promocode with name %s is expired!
+promocode.ride.amount.invalid=Promocode with name %s requires at least %s rides, but passenger has %s
