feat: add kafka communication to ride-service

--- a/ride-service/src/main/resources/application.yml
+++ b/ride-service/src/main/resources/application.yml
@@ -24,13 +24,22 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       group-id: ride-service-group
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: com.modsen.dto.request,com.modsen.dto.response
     producer:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     ride-producer-topic:
-      name: ride-topic
+      name: rides-topic
     status-producer-topic:
       name: driver-status-topic
     ride-consumer-topic:
       name: ride-with-driver-topic
+ride:
+  cost:
+    start: 3.00
+    per-kilometer: 1.50
