--- a/ride-service/src/main/resources/exception-messages.properties
+++ b/ride-service/src/main/resources/exception-messages.properties
@@ -1,6 +1,7 @@
 ride.not-available.driver=There is no available ride for a driver with id %s!
 ride.not-available.passenger=There is no confirmed ride for a passenger with id %s!
 ride.not-finished.passenger=Passenger with id %s already has unfinished ride!
+driver.not-available.ride=There is no available driver for ride with id %s at the moment!
 ride.not-found.id=Ride with %s was not found!
 page.invalid.size=Page size should be at least 1, but requested %s!
 page.invalid.number=Page number should be at least 1, but requested %s!
