--- a/driver-service/src/main/resources/exception-messages.properties
+++ b/driver-service/src/main/resources/exception-messages.properties
@@ -2,6 +2,7 @@ driver.not-found.id=Driver with id %s was not found!
 driver.not-found.status=There are no available drivers with %s status!
 driver.already-online=Driver with id %s is already online!
 driver.not-available=Driver with id %s is not available!
+driver.status.change.not-allowed=Driver cannot directly set his status to %s!
 page.invalid.size=Page size should be at least 1, but requested %s!
 page.invalid.number=Page number should be at least 1, but requested %s!
 page.invalid.number.with-limit=For the page size %s there are only %s pages, but requested %s
