feat: add logic for retrieving default credit card

--- a/payment-service/src/main/resources/exception-messages.properties
+++ b/payment-service/src/main/resources/exception-messages.properties
@@ -11,5 +11,6 @@ account.balance.insufficient=Requested to withdraw amount is %s, which is higher
 account.not-found.driver-id=Driver account for driver with id %s has not been created yet!
 card.already-exists=Credit card %s already exists for holder with role %s and id %s!
 card.default=Credit card %s should be default, because holder with role %s and id %s does not have any cards yet!
+card.default.missing=The payment cannot be processed because there is no credit card added for passenger with id %s!
 ride.already-paid=Ride with id %s has already been paid at %s!
 card.holder.invalid=Credit card with id %s does not belong to %s with id %s!
