feat: add logic for confirming promocode appliance

--- a/promocode-service/src/main/resources/exception-messages.properties
+++ b/promocode-service/src/main/resources/exception-messages.properties
@@ -4,3 +4,4 @@ promocode.already.exists=Promocode with name %s already exists!
 promocode.already.applied=Promocode with name %s has already been applied by passenger with id %s!
 promocode.expired=Promocode with name %s is expired!
 promocode.ride.amount.invalid=Promocode with name %s requires at least %s rides, but passenger has %s
+promocode.not-found.passenger=There is no promocode that can be applied for passenger with id %s!
