--- a/rating-service/src/main/resources/application.yml
+++ b/rating-service/src/main/resources/application.yml
@@ -1,24 +1,20 @@
 server:
-  port: 8085
+  port: 8084
   servlet:
     context-path: /api/v1
 spring:
   application:
-    name: promocode-service
+    name: rating-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/promocodes
+    url: jdbc:mysql://localhost:3306/ratings
     username: root
-    password: FLRPVcp41NC7mwD2TtX5
+    password: validate
   jpa:
     hibernate:
       ddl-auto: validate
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
-  cloud:
-    openfeign:
-      client:
-        config:
-          default:
-            connect-timeout: 1000
-            read-timeout: 1000
+rating:
+  average:
+    default: 5.00
