--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8083
   servlet:
-    context-path: /api/v1
+    context-path: /api/v1/payments
 spring:
   application:
     name: payment-service
