--- a/promocode-service/src/main/resources/application.yml
+++ b/promocode-service/src/main/resources/application.yml
@@ -15,3 +15,10 @@ spring:
       ddl-auto: validate
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
+  cloud:
+    openfeign:
+      client:
+        config:
+          default:
+            connect-timeout: 1000
+            read-timeout: 1000
