--- a/driver-service/src/main/resources/exception-messages.properties
+++ b/driver-service/src/main/resources/exception-messages.properties
@@ -3,6 +3,10 @@ driver.not-found.status=There are no available drivers with %s status!
 driver.already-online=Driver with id %s is already online!
 driver.not-available=Driver with id %s is not available!
 driver.status.change.not-allowed=Driver cannot directly set his status to %s!
+driver.not-unique.email=Driver with email %s already exists!
+driver.not-unique.number=Driver with phone number %s already exists!
+driver.not-unique.licence=Driver with driving licence %s already exists!
+driver.modifying.not-allowed=You can't update or delete driver with id %s as he is not in OFFLINE status!
 page.invalid.size=Page size should be at least 1, but requested %s!
 page.invalid.number=Page number should be at least 1, but requested %s!
 page.invalid.number.with-limit=For the page size %s there are only %s pages, but requested %s
