--- a/passenger-service/src/main/resources/exception-messages.properties
+++ b/passenger-service/src/main/resources/exception-messages.properties
@@ -1,5 +1,7 @@
 passenger.not-found.id=Passenger with id %s was not found!
 passenger.not-found.email=Passenger with email %s was not found!
+passenger.not-unique.email=Passenger with email %s already exists!
+passenger.not-unique.number=Passenger with phone number %s already exists!
 page.invalid.size=Page size should be at least 1, but requested %s!
 page.invalid.number=Page number should be at least 1, but requested %s!
 page.invalid.number.with-limit=For the page size %s there are only %s pages, but requested %s
