--- a/ride-service/src/main/resources/application.yml
+++ b/ride-service/src/main/resources/application.yml
@@ -52,3 +52,17 @@ ride:
   cost:
     start: 3.00
     per-kilometer: 1.50
+feign:
+  client:
+    driver:
+      name: driver-service
+      url: /api/v1/drivers
+    passenger:
+      name: passenger-service
+      url: /api/v1/passengers
+    payment:
+      name: payment-service
+      url: /api/v1/payments
+    promocode:
+      name: promocode-service
+      url: /api/v1/promocodes
