--- a/driver-service/src/main/resources/application.yml
+++ b/driver-service/src/main/resources/application.yml
@@ -23,13 +23,14 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       auto-offset-reset: latest
       properties:
-        spring:
-          json:
-            trusted:
-              packages: com.modsen.driver.dto.request
+        spring.json:
+          trusted.packages: com.modsen.driver.dto.request
+          type.mapping: ChangeDriverStatusRequest:com.modsen.driver.dto.request.ChangeDriverStatusRequest, FindDriverRequest:com.modsen.driver.dto.request.FindDriverRequest
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.type.mapping: UpdateRideDriverRequest:com.modsen.driver.dto.request.UpdateRideDriverRequest
     producer-topic:
       name: ride-with-driver-topic
     ride-consumer-topic:
