feat: implement fault tolerance and retry mechanism

--- a/promocode-service/src/main/resources/application.yml
+++ b/promocode-service/src/main/resources/application.yml
@@ -22,3 +22,27 @@ spring:
           default:
             connect-timeout: 1000
             read-timeout: 1000
+resilience4j:
+  retry:
+    instances:
+      ride-retry:
+        max-attempts: 5
+        wait-duration:
+          nanos: 200
+        enable-exponential-backoff: true
+        exponential-backoff-multiplier: 2
+        retry-exceptions:
+          - feign.FeignException.ServiceUnavailable
+  circuitbreaker:
+    instances:
+      ride-circuit-breaker:
+        sliding-window-type: count_based
+        sliding-window-size: 10
+        failure-rate-threshold: 75
+        slow-call-duration-threshold: 3s
+        slow-call-rate-threshold: 75
+        minimum-number-of-calls: 10
+        wait-duration-in-open-state: 10s
+        max-wait-duration-in-half-open-state: 10s
+        automatic-transition-from-open-to-half-open-enabled: true
+        permitted-number-of-calls-in-half-open-state: 5
