feat: add health and metrics monitoring using prometheus and grafana

--- a/passenger-service/src/main/resources/application.yml
+++ b/passenger-service/src/main/resources/application.yml
@@ -24,3 +24,8 @@ spring:
           default:
             connect-timeout: 1000
             read-timeout: 1000
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
