--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -6,7 +6,7 @@ COPY ./target/api-gateway-0.0.1-SNAPSHOT.jar ./application.jar
 
 RUN java -Djarmode=layertools -jar application.jar extract
 RUN $JAVA_HOME/bin/jlink \
-         --add-modules `jdeps --ignore-missing-deps -q -recursive --multi-release ${RELEASE} --print-module-deps application.jar` \
+         --add-modules java.base,java.compiler,java.desktop,java.instrument,java.management,java.prefs,java.rmi,java.scripting,java.security.jgss,java.sql.rowset,jdk.httpserver,jdk.jfr,jdk.unsupported \
          --strip-debug \
          --no-man-pages \
          --no-header-files \
@@ -18,9 +18,6 @@ FROM debian:buster-slim
 ARG BUILD_PATH=/opt/build
 ENV JAVA_HOME=/opt/jdk
 ENV PATH "${JAVA_HOME}/bin:${PATH}"
-
-USER spring-app:spring-app
-WORKDIR /opt/workspace
 
 COPY --from=app-build $BUILD_PATH/jdk $JAVA_HOME
 COPY --from=app-build $BUILD_PATH/spring-boot-loader/ ./
