--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -48,3 +48,8 @@ spring:
             - Path=/payments/**
           filters:
             - PrefixPath=/api/v1
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
