--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,19 @@ services:
     depends_on:
       - mysql
 
+  api-gateway:
+    image: cab-aggregator/api-gateway
+    container_name: api-gateway
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - cab_aggregator
+    depends_on:
+      - mysql
+      - eureka-server
+
   passenger-service:
     image: cab-aggregator/passenger-service
     container_name: passenger-service
@@ -133,6 +146,39 @@ services:
     depends_on:
       - mysql
       - eureka-server
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+#    volumes:
+#      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - eureka-server
+      - driver-service
+      - passenger-service
+      - payment-service
+      - rating-service
+      - promocode-service
+      - ride-service
+    networks:
+      - cab_aggregator
+
+  grafana:
+    image: grafana/grafana-oss
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./grafana:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=DeVit1210
+      - GF_SECURITY_ADMIN_PASSWORD=password
+    networks:
+      - cab_aggregator
 
 networks:
   cab_aggregator:
