--- a/driver-service/src/main/resources/application.yml
+++ b/driver-service/src/main/resources/application.yml
@@ -65,3 +65,8 @@ resilience4j:
         max-wait-duration-in-half-open-state: 30s
         automatic-transition-from-open-to-half-open-enabled: true
         permitted-number-of-calls-in-half-open-state: 2
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
