--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
   zookeeper:
     image: confluentinc/cp-zookeeper
     container_name: zookeeper
+    restart: always
     ports:
       - "2181:2181"
     environment:
@@ -26,6 +27,7 @@ services:
   broker:
     image: confluentinc/cp-kafka
     container_name: broker
+    restart: always
     ports:
       - "9092:9092"
     depends_on:
@@ -44,6 +46,7 @@ services:
   eureka-server:
     image: cab-aggregator/eureka-server
     container_name: eureka-server
+    restart: unless-stopped
     ports:
       - "8761:8761"
     expose:
@@ -53,14 +56,32 @@ services:
     depends_on:
       - mysql
 
+  api-gateway:
+    image: cab-aggregator/api-gateway
+    container_name: api-gateway
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
+    networks:
+      - cab_aggregator
+    depends_on:
+      - mysql
+      - eureka-server
+
   passenger-service:
     image: cab-aggregator/passenger-service
     container_name: passenger-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - '8081:8081'
-    restart: on-failure
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -70,10 +91,14 @@ services:
   driver-service:
     image: cab-aggregator/driver-service
     container_name: driver-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - "8082:8082"
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -83,12 +108,16 @@ services:
   payment-service:
     image: cab-aggregator/payment-service
     container_name: payment-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - "8083:8083"
     env_file:
       - .env
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -98,10 +127,14 @@ services:
   rating-service:
     image: cab-aggregator/rating-service
     container_name: rating-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - "8084:8084"
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -111,10 +144,14 @@ services:
   ride-service:
     image: cab-aggregator/ride-service
     container_name: ride-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - "8086:8086"
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
@@ -124,15 +161,110 @@ services:
   promocode-service:
     image: cab-aggregator/promocode-service
     container_name: promocode-service
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin-server:9411/api/v2/spans
     ports:
       - "8085:8085"
+    volumes:
+      - logs:/app/logs
     networks:
       - cab_aggregator
     depends_on:
       - mysql
       - eureka-server
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    depends_on:
+      - eureka-server
+      - driver-service
+      - passenger-service
+      - payment-service
+      - rating-service
+      - promocode-service
+      - ride-service
+    networks:
+      - cab_aggregator
+
+  grafana:
+    image: grafana/grafana-oss
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./grafana:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=DeVit1210
+      - GF_SECURITY_ADMIN_PASSWORD=password
+    networks:
+      - cab_aggregator
+
+  zipkin-server:
+    image: openzipkin/zipkin
+    container_name: zipkin-server
+    restart: unless-stopped
+    ports:
+      - "9411:9411"
+    networks:
+      - cab_aggregator
+    depends_on:
+      - api-gateway
+
+  elasticsearch:
+    image: elasticsearch:8.12.2
+    container_name: elasticsearch
+    restart: unless-stopped
+    ports:
+      - "9200:9200"
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    environment:
+      - ES_JAVA_OPTS=-Xmx256m -Xms256m
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - xpack.security.enabled=false
+      - xpack.security.enrollment.enabled=false
+      - xpack.ml.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+      - xpack.security.http.ssl.enabled=false
+      - http.cors.allow-origin="*"
+    networks:
+      - cab_aggregator
+
+  logstash:
+    image: logstash:8.12.2
+    container_name: logstash
+    restart: unless-stopped
+    ports:
+      - "5044:5044"
+    volumes:
+      - ./logstash/pipeline:/usr/share/logstash/pipeline
+      - logs:/app/logs
+    depends_on:
+      - elasticsearch
+    networks:
+      - cab_aggregator
+
+  kibana:
+    image: kibana:8.12.2
+    container_name: kibana
+    restart: unless-stopped
+    ports:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    depends_on:
+      - elasticsearch
+    networks:
+      - cab_aggregator
+
 
 networks:
   cab_aggregator:
@@ -140,3 +272,5 @@ networks:
 
 volumes:
   mysql-data:
+  elasticsearch-data:
+  logs:
