--- a/passenger-service/src/main/resources/application.yml
+++ b/passenger-service/src/main/resources/application.yml
@@ -24,3 +24,11 @@ spring:
           default:
             connect-timeout: 1000
             read-timeout: 1000
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  tracing:
+    sampling:
+      probability: 1.0
