--- a/promocode-service/src/main/resources/application.yml
+++ b/promocode-service/src/main/resources/application.yml
@@ -46,3 +46,11 @@ resilience4j:
         max-wait-duration-in-half-open-state: 10s
         automatic-transition-from-open-to-half-open-enabled: true
         permitted-number-of-calls-in-half-open-state: 5
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  tracing:
+    sampling:
+      probability: 1.0
