--- a/rating-service/src/main/resources/application.yml
+++ b/rating-service/src/main/resources/application.yml
@@ -66,3 +66,11 @@ resilience4j:
         base-config: default
       passenger-circuit-breaker:
         base-config: default
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  tracing:
+    sampling:
+      probability: 1.0
